--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.87.1",
+    "crypto-js": "^4.2.0",
     "dexie": "^4.2.1",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
